--- a/index.html
+++ b/index.html
@@ -7,5 +7,68 @@
 </head>
 <body>
     <h1>Learning Git and Github</h1>
+    <strong>Introduction</strong>
+    <p>To access computer resources there are two ways</p>
+    <li>Command line interface (CLI)</li>
+    <ol>
+        i - cmd (command prompt)
+    </ol>
+    <ol>
+        ii - powershell (gitbash (needs to install))
+    </ol>
+    <ol>
+        iii - azure (cloud)
+    </ol>
+    <li>Graphical user interface (GUI)
+        all the things that are graphical (we can see) e.g folders, videos, images etc.
+    </li>
+    
+    <h2>Powershell commands</h2>
+    <li> - ls  --> list </li>
+    <li> - ctrl + l --> clears screen </li>
+    <li> - cd .. --> go back </li>
+    <li> - mkdir --> creates folder (mkdir folderName)</li>
+    <li> - rm --> do delete folder/file (rm folderName)</li>
+    <li> - code . -> to open vs code </li>
+    <li> - mv --> to rename mv currentFolder newFolder </li>
+    </li>
+
+    <h1> Git and Github</h1>
+    <p>It is a version control system</p>
+    <li>- cmd - git -v (to check whether the git is installed or not)</li>
+    <li>
+        - download git if you don't have
+        </li>
+    <li>- open gitbash from start menu
+        </li>
+    <li>- touch index.html style.css script.js (can create multiple folders)
+        </li>
+    <li>- git repository (kind of database), different versions of our code get stores in it.
+        </li>
+    <li>- different branches in git (main branch is master branch)
+        </li>
+    <li>- U - stands for untracked folders
+       </li>
+    <li> - A - added 
+        </li>
+    <li>- M - Modified</li>
+
+    <h2>Git Commands</h2>
+    <li>- git init (To Initialize - to create repository
+        )
+        </li>
+    <li>- git add . (to add all files in staging area)
+        </li>
+    <li>- git status - to see files and there changes
+        </li>
+    <li>- git log - to see history
+        </li>
+    <li>- q to exit log
+        </li>
+    <li>- git checkout (commit id) - to move to that commit
+        
+        </li>
+    <li>git commit - whatever we change in our files we tell our repo to take screenshot of our code and add msg (commit) { To commit your code to repo
+     }</li>
 </body>
 </html>
