edited html file

--- a/index.html
+++ b/index.html
@@ -25,17 +25,18 @@
     </li>
     
     <h2>Powershell commands</h2>
-    <li> - ls  --> list </li>
-    <li> - ctrl + l --> clears screen </li>
-    <li> - cd .. --> go back </li>
-    <li> - mkdir --> creates folder (mkdir folderName)</li>
-    <li> - rm --> do delete folder/file (rm folderName)</li>
-    <li> - code . -> to open vs code </li>
-    <li> - mv --> to rename mv currentFolder newFolder </li>
+    <li> - ls  -- list </li>
+    <li> - ctrl + l -- clears screen </li>
+    <li> - cd .. -- go back </li>
+    <li> - mkdir -- creates folder (mkdir folderName)</li>
+    <li> - rm -- do delete folder/file (rm folderName)</li>
+    <li> - code . -- to open vs code </li>
+    <li> - mv -- to rename mv currentFolder newFolder </li>
     </li>
 
     <h1> Git and Github</h1>
     <p>It is a version control system</p>
+    <p>Download gitlens extension (very helpful)</p>
     <li>- cmd - git -v (to check whether the git is installed or not)</li>
     <li>
         - download git if you don't have
