--- a/index.html
+++ b/index.html
@@ -72,5 +72,10 @@
         </li>
     <li>git commit - whatever we change in our files we tell our repo to take screenshot of our code and add msg (commit) { To commit your code to repo
      }</li>
+
+    <h1>Branches</h1>
+    <p>By default master/main branch. Our live website is in master branch so developers try not to add new code in this branch but create new branch and add code then merge it in master branch </p>
+    <li>- git branch nameOfBranch -> to create new branch</li>
+    <li>- git checkout nameOfBranch -> to change branch</li>
 </body>
 </html>
