--- a/index.html
+++ b/index.html
@@ -72,5 +72,10 @@
         </li>
     <li>git commit - whatever we change in our files we tell our repo to take screenshot of our code and add msg (commit) { To commit your code to repo
      }</li>
+
+     <h1>Branches</h1>
+     <p>The main branch is master branch, developers try not to do add code in this branch because live website code is commited in this branch. The best practice is to create another branch then merge it into this branch</p>
+     <li> git checkout newbranchName - to create new branch</li>
+     <li> git checkout newbranchName - call it </li>
 </body>
 </html>
