--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 
      <h1>Branches</h1>
      <p>The main branch is master branch, developers try not to do add code in this branch because live website code is commited in this branch. The best practice is to create another branch then merge it into this branch</p>
-     <li> git checkout newbranchName - to create new branch</li>
+     <li> git branch newbranchName - to create new branch</li>
      <li> git checkout newbranchName - call it </li>
+     <li> git branch --delete branchName - to delete a branch, you must be out of the branch that you want to delete.</li>
 </body>
 </html>
