--- a/index.html
+++ b/index.html
@@ -78,5 +78,7 @@
      <li> git branch newbranchName - to create new branch</li>
      <li> git checkout newbranchName - call it </li>
      <li> git branch --delete branchName - to delete a branch, you must be out of the branch that you want to delete.</li>
+     <li> git merge (branch name that you want to merge), by stying in main branch</li>
+     
 </body>
 </html>
