--- a/index.html
+++ b/index.html
@@ -72,17 +72,8 @@
         </li>
     <li>git commit - whatever we change in our files we tell our repo to take screenshot of our code and add msg (commit) { To commit your code to repo
      }</li>
-<<<<<<< HEAD
-
-     <h1>Branches</h1>
-     <p>The main branch is master branch, developers try not to do add code in this branch because live website code is commited in this branch. The best practice is to create another branch then merge it into this branch</p>
-     <li> git branch newbranchName - to create new branch</li>
-     <li> git checkout newbranchName - call it </li>
-     <li> git branch --delete branchName - to delete a branch, you must be out of the branch that you want to delete.</li>
-     <li> git merge (branch name that you want to merge), by stying in main branch</li>
-     
-=======
      <li> -git log --all --oneline</li>
+     <li> -git log --all --oneline --graph</li>
 
     <h1>Branches</h1>
     <p>By default master/main branch. Our live website is in master branch so developers try not to add new code in this branch but create new branch and add code then merge it in master branch </p>
@@ -90,6 +81,7 @@
     <li>- git branch about -> created a branch name about</li>
     <li>- git checkout nameOfBranch -> to change branch</li>
     <li>- git checkout about -> to go to branch named about</li>
->>>>>>> about
+    <li> git branch NameOFtheBranchYouWantToMerge, by staying in main branch</li>
+    <li> bit branch --delete nameOfBranch</li>
 </body>
 </html>
