create github acc

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <li>- git init (To Initialize - to create repository
         )
         </li>
+        <li>- git branch -M main (rename branch) </li>
     <li>- git add . (to add all files in staging area)
         </li>
     <li>- git status - to see files and there changes
@@ -70,7 +71,7 @@
     <li>- git checkout (commit id) - to move to that commit
         
         </li>
-    <li>git commit - whatever we change in our files we tell our repo to take screenshot of our code and add msg (commit) { To commit your code to repo
+    <li>- git commit - whatever we change in our files we tell our repo to take screenshot of our code and add msg (commit) { To commit your code to repo
      }</li>
      <li> -git log --all --oneline</li>
      <li> -git log --all --oneline --graph</li>
@@ -81,7 +82,16 @@
     <li>- git branch about -> created a branch name about</li>
     <li>- git checkout nameOfBranch -> to change branch</li>
     <li>- git checkout about -> to go to branch named about</li>
-    <li> git branch NameOFtheBranchYouWantToMerge, by staying in main branch</li>
-    <li> bit branch --delete nameOfBranch</li>
+    <li>- git branch NameOFtheBranchYouWantToMerge, by staying in main branch</li>
+    <li>- git branch --delete nameOfBranch</li>
+
+
+    <h1> GitHub </h1>
+    <li>- git remote show origin - to see if our repo is connected to github or not</li>
+    <p>if there is no repo create a new repository</p>
+    <p>Below command are on github</p>
+    <li> git remote add origin https://github.com/Maryam-Liaquat/learning_github.git </li>
+    <li> git push -u origin main</li>
+
 </body>
 </html>
