--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
     <li> git remote add origin https://github.com/Maryam-Liaquat/learning_github.git </li>
     <li> git push -u origin main</li>
     
-
+    <p>Settings > collaborator > add people </p>
+    <h2>HOW TO CLONE/PUSH REPORISOTORY INTO LOCAL</h2>
+    <p>code > link </p>
+    <li>- git -clone addLinkHere</li>
+    <li>- git getch (to get the pushed code), then do git merge again</li>
+    <h2>GIT PULL </h2>
+    <li>- git pull - git fetch and merge both take place at the same time</li>
 </body>
 </html>
