added new elements in html file

--- a/index.html
+++ b/index.html
@@ -100,5 +100,13 @@
     <li>- git getch (to get the pushed code), then do git merge again</li>
     <h2>GIT PULL </h2>
     <li>- git pull - git fetch and merge both take place at the same time</li>
+    <li>- git reset --hard/--soft/--mixed (commit id) - if you commit something that you dont want in local..this works if u haven't push anything in github</li>
+    <li>- git reflog -> if u have reset the code mistakenly and want ur code back, this command will show ur old code and id...till it is in local</li>
+    <li>-git reset id</li>
+    <li>- git checkout head~1 - to move 1 step back</li>
+
+    <h2>NOW IF U HAVE PUSHED THE CODE WE WILL USE 'REVERT'</h2>
+    <li>- git revert commitID - jis commit ko revert krna hai uski id...reset main jis commit pe pohanchna hota tha uski id likhte hain</li>
+    <p>this revert code till this id</p>
 </body>
 </html>
