--- a/index.html
+++ b/index.html
@@ -108,5 +108,17 @@
     <h2>NOW IF U HAVE PUSHED THE CODE WE WILL USE 'REVERT'</h2>
     <li>- git revert commitID - jis commit ko revert krna hai uski id...reset main jis commit pe pohanchna hota tha uski id likhte hain</li>
     <p>this revert code till this id</p>
+    <h3>What is conflict and how to resolve it?</h3>
+    <p>conflict arrise when the code u want to merge is conflicting with code on any line of another branch</p>
+    <p>+ stash</p>
+    <li>- git stash -m 'this happens when u are working and stopping the code because u want to make changes in another branch or file' - this command will moce code to stash</li>
+
+    <li>- git stash list</li>
+
+    <h3>Cherry Picking - want to merge only few things but not whole code from branch</h3>
+    
+
+
+    <script src="script.js"></script>
 </body>
 </html>
