add gitignore folder information

--- a/index.html
+++ b/index.html
@@ -116,7 +116,11 @@
     <li>- git stash list</li>
 
     <h3>Cherry Picking - want to merge only few things but not whole code from branch</h3>
-    
+    <li>- git cherry-pick commitID - will commit only the code from this id</li>
+
+    <h3>What is .gitignore file? - .env (database credentials) we put this file in gitignore..we can put any file and folder in this, git will not track that file.</h3>
+    <p>node_modules ko bhi isme add krte hain</p>
+
 
 
     <script src="script.js"></script>
